# bornhack2024-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  partitions.csv  partitions.ods  sdkconfig.defaults  sdkconfig_bornhack2024  sdkconfig_bornhack2025  sdkconfig_kami  sdkconfig_mch2022  sdkconfig_tanmatsu
.github/workflows/: build.yml
main/: CMakeLists.txt  color.c  color.h  effects.c  effects.h  flags.c  flags.h  idf_component.yml  main.c  wifi_ota.c  wifi_ota.h
sdkconfigs/: bornhack-2024  bornhack-2025  general  kami  mch2022  tanmatsu
